fix/workaround compiler/c2/irTests/TestVectorizationMismatchedAccess